bugs resolved:- age guide fly-out arabic text overlap; Program icon sticker share; 'See more tips' link

--- a/src/components/list-box/_list-box.scss
+++ b/src/components/list-box/_list-box.scss
@@ -65,7 +65,7 @@
 
 .c-list-box--secondary .c-list-box__heading,
 .c-list-box--quaternary .c-list-box__heading {
-  padding: rem-calc(13 28);
+  padding: rem-calc(13 30);
 }
 
 .c-list-box--secondary .c-list-box__heading {
